  - Remove redundant nationSpawn variable, courtesy of Warriorrrr with PR #5485.
  - Add web map integration to status screens, courtesy of Warriorrrr with PR #5484.
  - Queue the revert on unclaim feature.
    - Only 20 plots can be actively reverting at one time.
    - Plot snapshots are only loaded into memory when the queue calls for the revert to start.
    - Closes #5473. 
  - Bump adventure-platform to 4.0.1 for 1.18 compatibility.
0.97.4.0:
  - Bump version number for release.
0.97.4.1:
  - Make the ItemLists class not an interface, courtesy of Warriorrrr with PR #5490.
  - Fix the delete town event causing an NPE in edge cases, courtesy of Warriorrrr with PR #5492.
  - Fix javadoc warning, courtesy of Warriorrrr with PR #5495.
  - Schedule the next newday scheduler 1 minute after a new day happens instead of 1 second after. 
  - Fix NewDay time code returning negative for some time zones. 
0.97.5.0:
  - Bump version number for hotfix release.
0.97.5.1:
  - Add helpful methods to BaseCommand.
  - Fix regex used to split the townyperms.yml error message.
  - API: Added StatusScreenEvent#getCommandSender()
    - It is now possible to learn who is going to view the StatusScreen being made.
  - Fix expired invite handler not accounting for sent nation ally invites.
  - New /ta merging commands, courtesy of Gamer153 with PR #5491. (First-Time Contributor!)
  - New Command: /ta town [townname] merge [townname] - Asks the 2nd town if they want to merge with the first.
  - New Command: /ta town [townname] forcemerge [townname] - Forcefully merges the 2nd town into the first.
  - New Command: /ta nation [nationname] merge [nationname] - Asks the 2nd nation if they want to merge with the first.
  - New Command: /ta nation [townname] forcemerge [townname] - Forcefully merges the 2nd nation into the first.
  - Make town neutrality cost appear on /towny prices for #5500.